feat: api ticket patch status for manager
